# ESP32-Home-assistant

./: .gitignore  CMakeLists.txt  README.md  sdk.config.ci.pdm_rx
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/certs/: client.crt  client.key
main/include/: demo_config.h  dht11.h  dyp.h  gpio.h  gpioo.h  inmp441.h  irReceiver.h  ky38.h  led_rgb.h  mqtt_client_eden.h  tcp.h  tf_utils.h  udp.h  utils.h  voice.h  webserver.h  wifih.h
main/src/: dht11.c  dyp.c  gpio.c  inmp441.c  irReceiver.c  ky38.c  main.c  mqtt_client_eden.c  mqtt_demo_mutual_auth.c  tcp_client_v4.c  tf_utils.cc  udp_client.c  utils.c  voice.c  webserver.c  wifi.c
